
  Thy_Output.display        thy_output_display
  Thy_Output.quotes         thy_output_quotes
  Thy_Output.indent         thy_output_indent
  Thy_Output.source         thy_output_source
  Thy_Output.break          thy_output_break

Note that the corresponding "..._default" references may be only
changed globally at the ROOT session setup, but *not* within a theory.


*** Pure ***

* Interpretation command 'interpret' accepts a list of equations like
'interpretation' does.

* Diagnostic command 'print_interps' prints interpretations in proofs
in addition to interpretations in theories.

* Discontinued obsolete 'global' and 'local' commands to manipulate
the theory name space.  Rare INCOMPATIBILITY.  The ML functions
Sign.root_path and Sign.local_path may be applied directly where this
feature is still required for historical reasons.


*** HOL ***

* Dropped type classes mult_mono and mult_mono1.  INCOMPATIBILITY.

* Theory SetsAndFunctions has been split into Function_Algebras and Set_Algebras;
canonical names for instance definitions for functions; various improvements.
INCOMPATIBILITY.

* Records: logical foundation type for records do not carry a '_type' suffix
any longer.  INCOMPATIBILITY.

* Code generation for records: more idiomatic representation of record types.
Warning: records are not covered by ancient SML code generation any longer.
INCOMPATIBILITY.  In cases of need, a suitable rep_datatype declaration
helps to succeed then:

  record 'a foo = ...
  ...
  rep_datatype foo_ext ...

* Session Imperative_HOL: revamped, corrected dozens of inadequacies.
INCOMPATIBILITY.

* Quickcheck in locales considers interpretations of that locale for
counter example search.

* Theory Library/Monad_Syntax provides do-syntax for monad types.  Syntax
in Library/State_Monad has been changed to avoid ambiguities.
INCOMPATIBILITY.

* Code generator: export_code without explicit file declaration prints
to standard output.  INCOMPATIBILITY.
